--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/react": "18.2.48",
+    "@types/node": "20.11.8",
     "autoprefixer": "^10.4.16",
     "css-loader": "^6.9.0",
     "next-compose-plugins": "^2.2.1",
