--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Motto",
+  "name": "motto",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,25 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.2.9",
-    "aos": "^2.3.4",
+    "@nextui-org/react": "^2.3.5",
     "dotenv": "^16.4.2",
-    "framer-motion": "^11.0.3",
-    "next": "^14.1.0",
+    "next": "^14.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "18.2.55",
-    "@types/node": "20.11.17",
+    "@types/node": "20.12.7",
     "autoprefixer": "^10.4.17",
-    "css-loader": "^6.10.0",
+    "css-loader": "^7.1.1",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^10.0.1",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.0",
-    "style-loader": "^3.3.4",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.4.5"
   }
 }
