--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,9 @@ jobs:
           mkdir -p $HOME/.kube
           echo "${{ secrets.DO_KUBECONFIG }}" | base64 --decode > $HOME/.kube/config
       
-      - name: Create .env file
+      - name: Create Kubernetes Secret
         run: |
-          echo "NEXT_PUBLIC_OPEN_AI_API_KEY"=${{ secrets.NEXT_PUBLIC_OPEN_AI_API_KEY }} > .env
-
-      - name: Create ConfigMap from .env file
-        run: |
-          kubectl create configmap motto-config --from-env-file=.env --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create secret generic motto-secret --from-literal=NEXT_PUBLIC_OPEN_AI_API_KEY="${{ secrets.NEXT_PUBLIC_OPEN_AI_API_KEY }}" --dry-run=client -o yaml | kubectl apply -f -
 
       - name: Deploy to Kubernetes
         run: |
