--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -30,4 +30,5 @@ spec:
         resources:
           requests:
             memory: "40Mi"
-            memory: "100Mi"
+          limits:
+            memory: "60Mi"
