--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "motto",
-  "version": "0.1.7",
+  "name": "newmotto",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,23 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.8",
-    "dotenv": "^16.4.2",
-    "next": "^14.2.2",
+    "autoprefixer": "^10.4.20",
+    "next": "14.2.15",
+    "openai": "^4.67.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^22.7.5",
     "@types/react": "18.3.11",
-    "@types/node": "22.7.5",
-    "autoprefixer": "^10.4.17",
-    "css-loader": "^7.1.1",
-    "next-compose-plugins": "^2.2.1",
-    "next-transpile-modules": "^10.0.1",
-    "postcss": "^8.4.35",
-    "postcss-loader": "^8.1.0",
-    "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.1",
+    "@types/react-dom": "^18.3.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "5.6.3"
   }
 }
