--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,17 +13,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Create .env file from secrets
+        run: |
+          echo "OPEN_AI_API_KEY=${{ secrets.NEXT_PUBLIC_OPEN_AI_API_KEY }}" > .env
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
-      - name: Create .env file
-        run: |
-          echo "OPEN_AI_API_KEY=${{ secrets.NEXT_PUBLIC_OPEN_AI_API_KEY }}" >> .env
 
       - name: Build and Push Docker Image
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-          docker build --secret id=env,src=.env -t ${{ secrets.DOCKERHUB_USERNAME }}/motto:latest -f Dockerfile .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/motto:latest -f Dockerfile .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/motto:latest
 
       - name: Set up kubectl
