--- a/k3s/hpa.yml
+++ b/k3s/hpa.yml
@@ -6,7 +6,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: motto-deployment
+    name: motto-d
   minReplicas: 1
   maxReplicas: 2
   metrics:
