--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "newmotto",
-  "version": "0.1.0",
+  "name": "motto",
+  "version": "0.1.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
-    "next": "14.2.15",
-    "openai": "^4.67.3",
+    "next": "15.0.3",
+    "openai": "^4.72.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^22.7.5",
+    "@types/node": "^22.9.0",
     "@types/react": "18.3.11",
     "@types/react-dom": "^18.3.1",
     "postcss": "^8.4.47",
