--- a/k3s/hpa.yaml
+++ b/k3s/hpa.yaml
@@ -8,11 +8,17 @@ spec:
     kind: Deployment
     name: motto-d
   minReplicas: 1
-  maxReplicas: 2
-  metrics:
-    - type: Resource
-      resource:
-        name: memory
-        target:
-          type: Utilization
-          averageUtilization: 180
+  maxReplicas: 3
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
+      policies:
+       -  type: Percent
+          value: 50
+          periodSeconds: 15
+    scaleUp:
+      stabilizationWindowSeconds: 0
+      policies:
+       -  type: Percent
+          value: 500
+          periodSeconds: 5
