--- a/k3s/service.yaml
+++ b/k3s/service.yaml
@@ -5,9 +5,9 @@ metadata:
   labels:
     app: motto
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
-    - port: 80
+    - port: 30089
       targetPort: 3000
   selector:
     app: motto
