--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
       context: .
       args:
         OPEN_AI_API_KEY: ${OPEN_AI_API_KEY}
-    image: "reg.nheek.com/nheek/motto:latest"
+    image: "ghcr.io/nheek/motto:latest"
     restart: unless-stopped
     ports:
       - "3000:3000"
     env_file:
       - .env
+    platform: linux/amd64
