--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.20",
+    "@tailwindcss/postcss": "^4.0.3",
     "next": "15.1.6",
     "openai": "^4.82.0",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -19,7 +20,6 @@
     "@types/node": "^22.13.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "^19.0.3",
-    "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3",
     "typescript": "5.7.3"
   }
