--- a/k3s/hpa.yaml
+++ b/k3s/hpa.yaml
@@ -1,24 +1,24 @@
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: motto-hpa
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: motto-d
-  minReplicas: 1
-  maxReplicas: 5
-  behavior:
-    scaleDown:
-      stabilizationWindowSeconds: 300
-      policies:
-       -  type: Percent
-          value: 50
-          periodSeconds: 15
-    scaleUp:
-      stabilizationWindowSeconds: 0
-      policies:
-       -  type: Percent
-          value: 200
-          periodSeconds: 5
+# apiVersion: autoscaling/v2
+# kind: HorizontalPodAutoscaler
+# metadata:
+#   name: motto-hpa
+# spec:
+#   scaleTargetRef:
+#     apiVersion: apps/v1
+#     kind: Deployment
+#     name: motto-d
+#   minReplicas: 1
+#   maxReplicas: 5
+#   behavior:
+#     scaleDown:
+#       stabilizationWindowSeconds: 300
+#       policies:
+#        -  type: Percent
+#           value: 50
+#           periodSeconds: 15
+#     scaleUp:
+#       stabilizationWindowSeconds: 0
+#       policies:
+#        -  type: Percent
+#           value: 200
+#           periodSeconds: 5
